@@ -12,3 +12,4 @@ void do_command(void);
 extern int fnlen;
 extern unsigned char filename[256];
 extern int dont_open;
+extern int allowFishLoad, allowFishSave;
